--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,79 @@
+# Dependency directories
+node_modules/
+bower_components/
+
+# Environment variables
+.env
+.env.* 
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+*.log
 
-node_modules
-dist
-.env
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS-specific files
 .DS_Store
+Thumbs.db
+Desktop.ini
+.idea/
+.vscode/
+
+# Build directories
+dist/
+build/
+coverage/
+out/
+tmp/
+*.class
+*.o
+*.out
+
+# Temporary files
+*.swp
+*.tmp
+*.bak
+*.old
+*.orig
+
+# Editor and IDE files
 *.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+*.user
+*.csproj
+*.vs/
+*.iml
+
+# Git files
+.git/
+.gitignore
+*.lock
+
+# Python files
+__pycache__/
+*.py[cod]
+*.pyo
+
+# macOS specific
+.Spotlight-V100
+.Trashes
+
+# Windows specific
+*.stackdump
+
+# JavaScript
+*.min.js
+*.map
+
+# Archive files
+*.zip
+*.tar.gz
+*.7z
+*.rar
+*.gzip
+
+# Application-specific (customize these as per your tech stack)
+package-lock.json
+.pnpm-debug.log
+.idea/
+yarn.lock
+coverage/
